plugins {
  id 'org.springframework.boot' version '3.4.1'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'java'
  id 'jacoco'
  id 'checkstyle'
  id 'war'
  id 'org.sonarqube' version '6.0.1.5171'
}

group = 'uk.co.fivium'
version = System.getenv("DRONE_BRANCH") ? System.getenv("DRONE_BRANCH").replaceAll("[/\\-]", "_") : "LOCAL-SNAPSHOT"
sourceCompatibility = '21'

tasks {
  bootJar {
    archiveFileName.set("${rootProject.name}.jar")
    exclude('**/localdevonly/**')
  }
}

repositories {
  mavenCentral()
  mavenLocal()
  maven { url "https://nexus.fivium.co.uk/repository/maven-releases/" }
  maven { url "https://nexus.fivium.co.uk/repository/maven-snapshots/" }
  maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
  maven {
    // Required for opensaml deps
    url "https://build.shibboleth.net/nexus/content/repositories/releases/"
  }
}

dependencies {

  providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

  implementation 'org.springframework.boot:spring-boot-starter'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-jdbc'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.security:spring-security-saml2-service-provider'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework:spring-test'
  implementation 'org.springframework.boot:spring-boot-starter-freemarker'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation "uk.co.fivium:file-upload-spring-boot-starter:v2.9.0"
  implementation 'uk.co.fivium:digital-notification-library-spring-boot-starter:v1.2.0'
  implementation 'io.micrometer:micrometer-registry-statsd'

  implementation 'org.springframework.boot:spring-boot-starter-quartz'

  implementation 'uk.co.fivium.energyportalapi:client:v12.4.0'
  implementation 'uk.co.fivium.digital.energyportalteamaccesslibrary:energy-portal-team-access-libray:v1.0.0'

  implementation 'org.flywaydb:flyway-core:9.5.1-FIVIUM'
  implementation "org.hamcrest:hamcrest:2.2"
  implementation 'com.oracle.database.jdbc:ojdbc11:21.9.0.0'
  implementation 'uk.gov.service.notify:notifications-java-client:5.2.1-RELEASE'
  implementation 'org.springframework.session:spring-session-jdbc'
  implementation('org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter:7.22.0') {
    // Exclude com.sun.xml.bind JAXB as it conflicts with glassfish JAXB from Hibernate Envers. The packages inside
    // the dependencies are the same so it is fine to exclude it.
    exclude group: 'com.sun.xml.bind', module: 'jaxb-impl'
  }

  implementation 'org.springframework.data:spring-data-envers'

  // automatically generates jpa meta-model for type safe criteria builder queries
  annotationProcessor("jakarta.xml.bind:jakarta.xml.bind-api")
  annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen")

  implementation 'com.google.guava:guava:33.2.1-jre'
  implementation 'org.apache.commons:commons-lang3:3.12.0'
  implementation 'org.apache.commons:commons-collections4:4.4'
  implementation('commons-validator:commons-validator:1.7') {
    // Exclude commons-logging to fix "Standard Commons Logging discovery in action with spring-jcl: please remove
    // commons-logging.jar from classpath in order to avoid potential conflicts" warning on startup.
    exclude group: 'commons-logging', module: 'commons-logging'
  }

  implementation group: 'fi.solita.clamav', name: 'clamav-client', version: '1.0.1'

  // https://mvnrepository.com/artifact/com.openhtmltopdf/openhtmltopdf-core
  implementation group: 'com.openhtmltopdf', name: 'openhtmltopdf-core', version: '1.0.10'
  // https://mvnrepository.com/artifact/com.openhtmltopdf/openhtmltopdf-pdfbox
  implementation group: 'com.openhtmltopdf', name: 'openhtmltopdf-pdfbox', version: '1.0.10'

  // https://mvnrepository.com/artifact/org.jsoup/jsoup
  implementation group: 'org.jsoup', name: 'jsoup', version: '1.16.1'

  // https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib
  implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

  implementation group: 'com.atlassian.commonmark', name: 'commonmark', version: '0.15.2'
  implementation group: 'com.atlassian.commonmark', name: 'commonmark-ext-gfm-tables', version: '0.15.2'

  implementation('uk.co.fivium.feedbackmanagementservice:client:2.1.1')

  implementation 'uk.co.fivium:ftss-client-spring-boot-starter:v1.0.2'

  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

  implementation 'net.logstash.logback:logstash-logback-encoder:7.2'

  implementation 'net.javacrumbs.shedlock:shedlock-spring:5.16.0'
  implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.16.0'

  implementation "com.amazonaws:aws-java-sdk-s3:1.12.777"

  testImplementation 'com.h2database:h2:1.4.200'
  testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.16.1'
  testImplementation "org.junit.jupiter:junit-jupiter-params:5.11.4"
    testImplementation "org.mockito:mockito-junit-jupiter:4.11.0"
    testImplementation(
      'org.springframework.boot:spring-boot-starter-test',
      'org.springframework.security:spring-security-test',
      'com.squareup.okhttp3:mockwebserver:4.12.0',
      'com.squareup.okhttp3:okhttp:4.12.0' // Required otherwise MockWebServer gives ClassNotFoundException
  )

}

checkstyle {
  config = rootProject.resources.text.fromFile('ide/checkstyle.xml')
  toolVersion '10.21.1'
  ignoreFailures = false
  maxWarnings = 0
  // Sets suppressionFile property so checkstyle during build ignores generated files.
  // The default path used by ide is not relative so will cause failures if that is used in isolation.
  configProperties = [ "suppressionFile" : project(':').file('ide/checkstyle-suppression.xml')]
}

test {
    minHeapSize = "5g" // initial heap size
    maxHeapSize = "10g" // maximum heap size
    useJUnitPlatform()
}

tasks.jacocoTestReport {
  reports {
    xml.required = true
  }
}

sonarqube {
  properties {
    property 'sonar.projectKey', 'Fivium_pipeline-works-authorisations'
    property 'sonar.organization', 'fivium-gh'
    property 'sonar.host.url', 'https://sonarcloud.io'
    property 'sonar.login', System.getenv('SONARCLOUD_TOKEN')

    if (System.getenv('DRONE_PULL_REQUEST') != null) {
      property 'sonar.pullrequest.key', System.getenv('DRONE_PULL_REQUEST')
      property 'sonar.pullrequest.base', System.getenv('DRONE_TARGET_BRANCH')
      property 'sonar.pullrequest.branch', System.getenv('DRONE_SOURCE_BRANCH')
      property 'sonar.pullrequest.provider', 'github'
      property 'sonar.pullrequest.github.repository', 'pipeline-works-authorisations'
      property 'sonar.pullrequest.github.endpoint', 'https://api.github.com/'
    } else {
      property 'sonar.branch.name', System.getenv('DRONE_BRANCH')
      if (System.getenv('DRONE_BRANCH') != 'develop') {
        property 'sonar.branch.target', 'develop'
      }
      property 'sonar.coverage.jacoco.xmlReportPaths', "${layout.buildDirectory}/reports/jacoco/test/jacocoTestReport.xml"
    }

    property("sonar.exclusions", "src/test/**, src/main/resources/public/assets/**, fivium-design-system-core/**, src/main/resources/templates/fds/**, build/**")
    property("sonar.sources", "src")
  }
}
